--- a/bistro/index.html
+++ b/bistro/index.html
@@ -30,6 +30,12 @@ font-size: 1em;
 <body>
 <h1><img src="blackgoose.png" alt="logo"><br>Black Goose Bistro</h1>
 
+<a href="index.html">Home</a>
+<a href="indextwo.html">Recipes</a>
+<a href="bgnews.html">News</a>
+<a href="about.html">About Chef Jen</a>
+<a href="glossary.html" target="glossary">Glossary</a>
+
 <h2>The Restaurant</h2>
 <p>The Black Goose Bistro offers casual lunch and dinner fare in a relaxed 
 atmosphere. The menu changes regularly to highlight the freshest local
