--- a/blackgoose/gallery.html
+++ b/blackgoose/gallery.html
@@ -32,6 +32,12 @@ h2 {
 
 
 <h1>Black Goose Bistro Gallery</h1>
+<a href="index.html">Home</a>
+<a href="indextwo.html">Recipes</a>
+<a href="bgnews.html">News</a>
+<a href="about.html">About Chef Jen</a>
+<a href="glossary.html" target="glossary">Glossary</a>
+<a href="gallery.html">Gallery</a>
 <p>Not is our food good, it's also good-looking! Our patrons often stop to admire our fare with a quick Instagram before digging in. We've collected a few of our favorite shots here.</p>
 
 <h2>Our Baked Goods</h2>
