--- a/blackgoose/glossary.html
+++ b/blackgoose/glossary.html
@@ -27,7 +27,12 @@ font-size: 1em;
 <body>
 
 <h1 id="top">Glossary</h1>
-
+<a href="index.html">Home</a>
+<a href="indextwo.html">Recipes</a>
+<a href="bgnews.html">News</a>
+<a href="about.html">About Chef Jen</a>
+<a href="glossary.html" target="glossary">Glossary</a>
+<a href="gallery.html">Gallery</a>
 <p>
 <a href="#startA">A</a> 
 | <a href="#startB">B</a>
