--- a/resume/index.html
+++ b/resume/index.html
@@ -6,7 +6,26 @@
 
 <meta charset="utf-8">
 <title>Jayla's Web</title>
-
+<style>
+ body {
+background-color: #C018EE;
+margin: 0 10%;
+font-family: sans-serif;
+}
+h1 {
+color: #36E0FF;
+text-align: center;
+font-family: serif;
+font-weight: normal;
+text-transform: uppercase;
+border-bottom: 2px solid #57b1dc;
+margin-top: 30px;
+}
+h2 {
+color: #36E0FF;
+font-size: 2em;
+}
+</style>
 </head>
 
 <body>
@@ -49,15 +68,16 @@ You can scroll down to learn more about me and even see some of  my work!</p>
 </ul>
 
 <h2>Work Samples</h2>
-<p><img src="photos/gradientstill.jpg" alt="picture of still life gradient made by me in Illustrator" width="500" height="400">
-This is a still life photo that I illustrated in Adobe Illustrator</p>
-<p><img src="photos/photoshop.jpg" alt="photoshop edit made by me" width="500" height="400">
-This is a graphic design I put together using different stock photography to make this come together into one.</p>
-<p><img src="photos/logodesign.jpg" alt="logo design made by me" width="500" height="400">
-This is a logo design that I made in Illustator. </p>
-<p><img src="photos/card.jpg" alt="card made by me in photoshop and illustrator"500" height="400">
-This is a post card that I made using both Photoshop and Illustrator.</p>
-<p><img src="photos/tribal.jpg" alt="tribal photo made by me in Illustrator="500" height="400">
-This is a tribal tattoo that I illustrated using Illustrator.</p>
+<a href="gradientstill.html">
+<img src="thumbnails/gradientstill-200.jpg" alt="picture of still life gradient made by me in Illustrator" width="200" height="200"></a>
+<a href="photoshop.html">
+<img src="thumbnails/photoshop-200.jpg" alt="photoshop edit made by me" width="200" height="200"></a>
+<a href="logodesign.html">
+<img src="thumbnails/logodesign-200.jpg" alt="logo design made by me" width="200" height="200"></a>
+<a href="card.html">
+<img src="thumbnails/card-200.jpg" alt="card made by me in photoshop and illustrator"200" height="200"></a>
+<a href="tribal.html">
+<img src="thumbnails/tribal-200.jpg" alt="tribal photo made by me in Illustrator="200" height="200"></a>
+
 </body>
 </html>
