--- a/blackgoose/index.html
+++ b/blackgoose/index.html
@@ -71,7 +71,8 @@ events from snacks for a meetup to elegant corporate fundraisers.</p>
 <h2>Location and Hours</h2>
 <p>Seekonk, Massachusetts;<br>
 Monday through Thursday 11am to 9pm;<br> Friday and Saturday, 11am to midnight </p>
-
+<a href="pizza.html">
+<img src="pizzaicon.gif" alt="pizza ordering button="200" height="200"></a>
 <footer>
 <p>Please visit our social media pages</p>
 <p>
@@ -79,6 +80,7 @@ Monday through Thursday 11am to 9pm;<br> Friday and Saturday, 11am to midnight <
 <img src="icons/facebook.svg" alt="facebook">
 <img src="icons/instagram.svg" alt="instagram">
 </p>
+
 </footer>
 
 </body> 
