--- a/blackgoose/cooking.html
+++ b/blackgoose/cooking.html
@@ -3,24 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <title>Cooking with Nada Surf</title>
+<link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text&display=swap" rel="stylesheet">
 <style>
-h1 {
-color: orange;
-border-bottom: 1px solid orange;
-}
-p {
-font-size: large;
-font-family: sans-serif;
-margin-left: 100px;
-}
-h2 {
-color: orange;
-margin-left: 100px;
-}
-img {
-float: right;
-margin: 0 12px;
-}
+@import url(blackgoosestyles.css);
 </style>
 </head>
 
