--- a/blackgoose/fish.html
+++ b/blackgoose/fish.html
@@ -3,23 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <title>Gallery: Catch of the Day</title>
+<link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text&display=swap" rel="stylesheet">
 <style>
-body {
-  background-color: #faf2e4;
-  margin: 0 10%;
-  font-family: sans-serif;
-  text-align: center;
-  }
-
-h1 {
-  text-align: center;
-  font-family: serif;
-  font-weight: normal;
-  text-transform: uppercase;
-  border-bottom: 1px solid #57b1dc;
-  margin-top: 30px;
-}
-
+@import url(blackgoosestyles.css);
 </style>
 
 </head>
