--- a/blackgoose/gallery.html
+++ b/blackgoose/gallery.html
@@ -3,27 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <title>Black Goose Bistro Gallery</title>
+
+<link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text&display=swap" rel="stylesheet">
 <style>
-body {
-  background-color: #faf2e4;
-  margin: 0 10%;
-  font-family: sans-serif;
-  }
-
-h1 {
-  text-align: center;
-  font-family: serif;
-  font-weight: normal;
-  text-transform: uppercase;
-  border-bottom: 1px solid #57b1dc;
-  margin-top: 30px;
-}
-
-h2 {
-  color: #d1633c;
-  font-size: 1em;
-}
-
+@import url(blackgoosestyles.css);
 </style>
 
 </head>
