--- a/blackgoose/glossary.html
+++ b/blackgoose/glossary.html
@@ -3,24 +3,9 @@
 <head>
 <meta charset="utf-8">
 <title>Glossary</title>
+<link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text&display=swap" rel="stylesheet">
 <style>
- body {
-background-color: #faf2e4;
-margin: 0 10%;
-font-family: sans-serif;
-}
-h1 {
-text-align: center;
-font-family: serif;
-font-weight: normal;
-text-transform: uppercase;
-border-bottom: 1px solid #57b1dc;
-margin-top: 30px;
-}
-h2 {
-color: #d1633c;
-font-size: 1em;
-}
+@import url(blackgoosestyles.css);
  </style>
 
 </head>
