--- a/resume/gradientstill.html
+++ b/resume/gradientstill.html
@@ -3,25 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <title>Gallery: Gradient Still</title>
+<link href="https://fonts.googleapis.com/css2?family=Boogaloo&display=swap" rel="stylesheet">
 <style>
- body {
-background-color: #C018EE;
-margin: 0 10%;
-font-family: sans-serif;
-}
-h1 {
-color: #36E0FF;
-text-align: center;
-font-family: serif;
-font-weight: normal;
-text-transform: uppercase;
-border-bottom: 2px solid #57b1dc;
-margin-top: 30px;
-}
-h2 {
-color: #36E0FF;
-font-size: 2em;
-}
+ @import url(resumestyles.css);
 </style>
 <body>
 
