--- a/resume/index.html
+++ b/resume/index.html
@@ -6,25 +6,9 @@
 
 <meta charset="utf-8">
 <title>Jayla's Web</title>
+<link href="https://fonts.googleapis.com/css2?family=Boogaloo&display=swap" rel="stylesheet">
 <style>
- body {
-background-color: #C018EE;
-margin: 0 10%;
-font-family: sans-serif;
-}
-h1 {
-color: #36E0FF;
-text-align: center;
-font-family: serif;
-font-weight: normal;
-text-transform: uppercase;
-border-bottom: 2px solid #57b1dc;
-margin-top: 30px;
-}
-h2 {
-color: #36E0FF;
-font-size: 2em;
-}
+  @import url(resumestyles.css);
 </style>
 </head>
 
@@ -77,7 +61,7 @@ You can scroll down to learn more about me and even see some of  my work!</p>
 <a href="card.html">
 <img src="thumbnails/card-200.jpg" alt="card made by me in photoshop and illustrator"200" height="200"></a>
 <a href="tribal.html">
-<img src="thumbnails/tribal-200.jpg" alt="tribal photo made by me in Illustrator="200" height="200"></a>
+<img src="thumbnails/tribal-200.jpg" alt="tribal photo made by me in Illustrator="300" height="200"></a>
 
 </body>
 </html>
